<resources>
    <string name="app_name">Covid19</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="summary_data_indonesia">Kasus Di Indonesia</string>
    <string name="summary_data_dunia">Kasus Di Dunia</string>
    <string name="meninggal">Meninggal</string>
    <string name="sembuh">Sembuh</string>
    <string name="terjangkit">Terjangkit</string>
    <string name="keterangan">keterangan</string>
    <string name="positif">Positif</string>
    <string name="last_update">Update Terkahir</string>
    <string name="from_corona">Dari Corona</string>
</resources>
